2007-08-15  Raffaele Sandrini  <raffaele@sandrini.ch>

	* vapi/Makefile.am: create gee-1.0 vapi; this makes it possible to
	  use the vala shipped libgee copy without an separate installed
	  version of libgee i.e. it enables to run the tests without installed
	  libgee

2007-08-14  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vala/valainterfacewriter.vala:
	generate "throws" clause when needed

2007-08-14  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* gobject/valaccodecompiler.vala: do not pass non-existant 
	packages to pkg-config

2007-08-13  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vapi/glib-2.0.vala: correct KeyFile accessors,
	reported by Arwed von Merkatz.

2007-08-13  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vapi/gdk-2.0.vala: use gdk_cursor_unref to release
	cursors, patch by Arwed von Merkatz.

2007-08-13  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vapi/Makefile.am: install gstreamer-0.10.vala,
	reported by Arwed von Merkatz.

2007-08-13  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vapi/gtk+-2.0.vala: Duh, it is GTK_WIDGET_SET_FLAGS,
	not gtk_widget_set_flags. Where is "svn commit --amend"?

2007-08-13  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vapi/gtk+-2.0.vala: adding Widget.set_flags.

2007-08-13  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vapi/pango.vala: listing dup and free function of PangoLayoutLine.

2007-08-13  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vapi/cairo.vala: adding Context.set_matrix and get_matrix.

2007-08-13  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vapi/glib-2.0.vala: yet another attempt to deal
	with the notify signal.

2007-08-12  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vapi/glib-2.0.vala: avoid name clash between Object.notify
	method and signal. real solution for that problem should be some
	cleverness in the semantic analyser of vala.

2007-08-12  Mathias Hasselmann  <mathias.hasselmann@gmx.de>
