@@ -264,15 +264,7 @@ public abstract class Vala.CodeVisitor {
 	 *
 	 * @param list an initializer list
 	 */
-	public virtual void visit_begin_initializer_list (InitializerList! list) {
-	}
-	
-	/**
-	 * Visit operation called for initializer lists
-	 *
-	 * @param list an initializer list
-	 */
-	public virtual void visit_end_initializer_list (InitializerList! list) {
+	public virtual void visit_initializer_list (InitializerList! list) {
 	}
 
 	/**
@@ -418,21 +410,13 @@ public abstract class Vala.CodeVisitor {
 	 */
 	public virtual void visit_lock_statement (LockStatement! stmt) {
 	}
-	
+
 	/**
 	 * Visit operations called for array creation expresions.
 	 *
 	 * @param expr an array creation expression
 	 */
-	public virtual void visit_begin_array_creation_expression (ArrayCreationExpression! expr) {
-	}
-	
-	/**
-	 * Visit operations called for array creation expresions.
-	 *
-	 * @param expr an array creation expression
-	 */
-	public virtual void visit_end_array_creation_expression (ArrayCreationExpression! expr) {
+	public virtual void visit_array_creation_expression (ArrayCreationExpression! expr) {
 	}
 
 	/**
